' *******************************************************************************
' Copyright (c) 2026 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' https://www.apache.org/licenses/LICENSE-2.0
'
' SPDX-License-Identifier: Apache-2.0
' *******************************************************************************

@startuml message_broker_class_diagram

title MessageBroker: Class Diagram

legend top left
    |= Color         |= Description                    |
    | <#Beige>       | Base classes                    |
    | <#PaleTurquoise> | MessageBroker                 |
endlegend

class "PtpTimeInfo" as time_info #Beige {
    +ptp: uint64
    +local_time: uint64
    +status: int
}

class "Topic" as topic #Beige {
    -name_: string
    +Name(): string
}

abstract class "Consumer<T>" as consumer #Beige {
    +OnMessage(data: T): void
}

abstract class "Producer<T>" as producer #Beige {
    +SetPublishCallback(callback): void
}

class "Subscription<T>" as subscription #PaleTurquoise {
    +callback_: function<void(const T&)>
}

class "MessageBroker<T>" as msg_broker #PaleTurquoise {
    +AddSubscriber(topic, subscriber): void
    +AddProducer(topic, producer): void
    -Subscribe(topic, subscription): void
    -Publish(topic, data): void
    -OnNewData(topic, data): void
}

msg_broker "1" *-- "*" subscription : contains
msg_broker --> topic : uses
msg_broker ..> consumer : registers
msg_broker ..> producer : registers
subscription --> time_info : delivers

note right of msg_broker
    MessageBroker
    manages topic-based
    publish-subscribe pattern
end note

@enduml
